# mais_todos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  dockerfile  dockerfile.alkmaar  pyproject.toml  readme.md  requirements.txt  setup.cfg
.github/workflows/: lint.yml  tests.yml
data/db/base/1/: 2619  pg_internal.init
data/db/base/5/: pg_internal.init
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
envs/: .env  postgres.env
scripts/: start-lint.sh  start-tests.sh  start.sh
source/: .coverage  db.sqlite3  manage.py  pytest.ini
source/credit_card/: exceptions.py  models.py  routers.py  serializers.py  tests.py  utils.py  views.py
source/credit_card/management/commands/: seed.py
source/credit_card/migrations/: 0001_initial.py  0002_auto_20230305_1843.py  0003_auto_20230305_2134.py
source/mais_todos/: asgi.py  settings.py  urls.py  wsgi.py
